progress on the website main page

--- a/content/blog/github-markdown.mdx
+++ b/content/blog/github-markdown.mdx
@@ -1,5 +1,6 @@
 ---
-title: Github Flavoured Markdown CheatSheet
+title: Github Tricks
+image: "/images/GoogleSS2.png"
 description: A markdown cheat sheet for GFM
 date: 2024-03-03
 published: true
