--- a/content/blog/summon-component.mdx
+++ b/content/blog/summon-component.mdx
@@ -1,5 +1,6 @@
 ---
-title: "How to Summon a React Component: A Beginner's Guide"
+title: "Justice Gun 2"
+image: "/images/GoogleSS5.png"
 description: Dive into the mystical world of React and learn the incantations needed to summon your very first React component with humor and ease.
 date: 2024-02-23
 published: true
