--- a/content/blog/disappearing-props.mdx
+++ b/content/blog/disappearing-props.mdx
@@ -1,6 +1,7 @@
 ---
-title: "The Mysterious Case of the Disappearing Props"
-description: Join us on a humorous detective journey to solve the mystery of disappearing props in a React application. Learn troubleshooting tips and best practices to prevent your props from vanishing into thin air.
+title: "Dirty Revolver"
+image: "/images/GoogleSS1.png"
+description: Dirty Revolver game design
 date: 2024-03-01
 tags: ["code", "react", "props"]
 published: true
