--- a/content/blog/react-debug-magic.mdx
+++ b/content/blog/react-debug-magic.mdx
@@ -1,5 +1,6 @@
 ---
-title: "Debugging React with Wizardry and Magic: A Developer's Spellbook"
+title: "Procedural World Generation"
+image: "/images/GoogleSS5.png"
 description: Enter the mystical world of debugging React applications with a touch of humor. Learn spells and incantations to banish bugs and optimize your code, all while navigating the enchanting forest of React development.
 date: 2024-02-27
 tags: ["react"]
