--- a/content/blog/githubtricks.mdx
+++ b/content/blog/githubtricks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Github Tricks
-image: "/images/GoogleSS2.png"
+image: "./images/GoogleSS2.png"
 description: A markdown cheat sheet for GFM
 date: 2022-03-03
 published: true
