--- a/content/blog/prodecuralworldgeneration.mdx
+++ b/content/blog/prodecuralworldgeneration.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Procedural World Generation"
-image: "/images/GoogleSS5.png"
+image: "./images/GoogleSS5.png"
 description: Enter the mystical world of debugging React applications with a touch of humor. Learn spells and incantations to banish bugs and optimize your code, all while navigating the enchanting forest of React development.
 date: 2024-02-27
 tags: ["react"]
