--- a/content/projects/summon-component.mdx
+++ b/content/projects/summon-component.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Justice Gun 2"
-image: "/images/GoogleSS5.png"
+image: "./images/GoogleSS5.png"
 description: Dive into the mystical world of React and learn the incantations needed to summon your very first React component with humor and ease.
 date: 2028-02-23
 published: true
