--- a/content/blog/SDFs.mdx
+++ b/content/blog/SDFs.mdx
@@ -1,6 +1,6 @@
 ---
 title: "SDFs"
-image: "/images/GoogleSS4.png"
+image: "./images/GoogleSS4.png"
 description: Step into a spine-chilling narrative where React components face the dread of prop drilling. Discover how using Context API or Redux can save your components from the depths of despair in this humorous take on a common React challenge.
 date: 2023-02-28
 tags: ["code", "react", "props"]
