Save before change

--- a/content/blog/githubtricks.mdx
+++ b/content/blog/githubtricks.mdx
@@ -1,6 +1,7 @@
 ---
+slug: githubtricks
 title: Github Tricks
-image: "./images/GoogleSS2.png"
+image: cover.jpg
 description: A markdown cheat sheet for GFM
 date: 2022-03-03
 published: true
