--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -1,8 +1,8 @@
 ---
-title: "Adalet Namluda 1"
-image: "../images/AdaletNamluda2.png"
-description: "Cover shooter game description"
-date: 2020-03-04
+title: Lets see what we can do with rehype pretty code
+image: "../images/GoogleSS4.png"
+description: Syntax highlighting, line numbers, line highlights, word highlights
+date: 2024-03-04
 published: true
 ---
 
