--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Lets see what we can do with rehype pretty code
-image: "../images/GoogleSS4.png"
+image: "./../images/GoogleSS4.png"
 description: Syntax highlighting, line numbers, line highlights, word highlights
 date: 2024-03-04
 published: true
