--- a/content/articles/react-state-management.mdx
+++ b/content/articles/react-state-management.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Mathf"
-image: "../images/GoogleSS4.png"
+image: ".././images/GoogleSS4.png"
 description: Embark on a dramatic journey through the realm of React state management. Witness the love triangles, betrayals, and heartaches that components face as they navigate the complex world of state management, with a special appearance by Redux.
 date: 2027-02-24
 published: true
