--- a/content/projects/adaletnamluda2.mdx
+++ b/content/projects/adaletnamluda2.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Adalet Namluda 1"
-image: "../images/AdaletNamluda2.png"
+image: "./../images/AdaletNamluda2.png"
 description: "Cover shooter game description"
 date: 2020-03-04
 published: true
