--- a/content/projects/dirtyrevolver.mdx
+++ b/content/projects/dirtyrevolver.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Dirty Revolver"
-image: "../images/GoogleSS1.png"
+image: "./../images/GoogleSS1.png"
 description: Dirty Revolver game design
 date: 2021-03-01
 published: true
