--- a/content/articles/react-hooks.mdx
+++ b/content/articles/react-hooks.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Some Random Thing"
-image: "../images/GoogleSS3.png"
+image: "./../images/GoogleSS3.png"
 description: Explore the amusing analogy of React Hooks as fishing tools designed to catch components in the vast sea of React development. Learn how to use useState, useEffect, and useContext to manage your catch effectively.
 date: 2025-02-26
 published: true
