--- a/content/articles/react-lifecycle-cats.mdx
+++ b/content/articles/react-lifecycle-cats.mdx
@@ -1,6 +1,6 @@
 ---
 title: "Cats and Dogs"
-image: "../images/GoogleSS1.png"
+image: ".././images/GoogleSS1.png"
 description: A whimsical exploration of the React component lifecycle, with each stage humorously explained through the behavior of cats. Perfect for developers looking to understand lifecycle methods in a more relatable and entertaining way.
 date: 2026-02-25
 published: true
