--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -1,5 +1,5 @@
 ---
-title: Lets see what we can do with rehype pretty code
+title: Testing Prime
 image: "/GoogleSS4.png"
 description: Syntax highlighting, line numbers, line highlights, word highlights
 date: 2024-03-04
