--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -1,5 +1,5 @@
 ---
-title: Testing Prime
+title: Testing Prime1
 image: "/GoogleSS4.png"
 description: Syntax highlighting, line numbers, line highlights, word highlights
 date: 2024-03-04
