--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -1,6 +1,6 @@
 ---
 title: Testing Prime1
-image: cover.png
+image: cover.jpg
 description: Syntax highlighting, line numbers, line highlights, word highlights
 date: 2024-03-04
 published: true
