--- a/content/articles/code-blocks.mdx
+++ b/content/articles/code-blocks.mdx
@@ -6,6 +6,8 @@ date: 2024-03-04
 published: true
 ---
 
+<Image src="cover.jpg" width={512} height={512} />
+
 [`rehype-pretty-code`](https://github.com/atomiks/rehype-pretty-code) is a Rehype plugin powered by the
 [`shiki`](https://github.com/shikijs/shiki) syntax highlighter that provides beautiful code blocks for Markdown or MDX. It works on both the server at build-time (avoiding runtime syntax highlighting) and on the client for dynamic highlighting.
 
