--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -9,28 +9,30 @@ published: true
 
 ## Cover Shooter: Gun Shooting
 
-<Image src="./../images/covershooter-header.png" width={512} height={512} />
+<div style={{ textAlign: 'center', margin: '20px 0' }}>
+  <Image src="./../images/covershooter-header.png" width={512} height={512} />
+</div>
 
-<div style={{ display: 'flex', justifyContent: 'space-between', alignItems: 'center' }}>
-  <div>
-    <strong>Android:</strong>
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'flex-start', marginTop: '20px' }}>
+  <div style={{ marginRight: '40px' }}>
+    <h3>Android</h3>
     <ul>
       <li>Rating: 4.7★</li>
       <li>Downloads: 100K+</li>
       <li>Reviews: 829</li>
         <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d' target="_blank" rel="noopener noreferrer">
-          <img alt='Get it on Google Play' src='./../images/googleplay-download-badge.png' style={{ width: '250px' }}/>
+          <img alt='Get it on Google Play' src='./../images/googleplay-download-badge.png' style={{ width: '200px', marginTop: '10px' }}/>
         </a>
     </ul>
   </div>
   <div>
-    <strong>iOS:</strong>
+    <h3>iOS</h3>
     <ul>
       <li>Rating: 4.6★</li>
       <li>Downloads: 80K+</li>
       <li>Reviews: 750</li>
         <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer">
-          <img alt='Download on the App Store' src='./../images/appstore-download-badge.svg' style={{ width: '200px' }}/>
+          <img alt='Download on the App Store' src='./../images/appstore-download-badge.svg' style={{ width: '200px', marginTop: '10px' }}/>
         </a>
     </ul>
   </div>
