--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -10,33 +10,54 @@ published: true
 ## Cover Shooter: Gun Shooting
 
 <div style={{ textAlign: 'center', margin: '20px 0' }}>
-  <Image src="./../images/covershooter-header.png" width={512} height={512} />
+  <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" width={512} height={512} />
+</div>
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', marginTop: '20px' }}>
+<DownloadSection
+    title="Android"
+    points={['Rating: 4.4★', 'Downloads: 300K+', 'Reviews: 3k+']}
+    badgeLink="https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d"
+    badgeImage="./../images/googleplay-download-badge.png"
+  />
+  <DownloadSection
+    title="IOS"
+    points={['Rating: 4.7★', 'Downloads: 100K+', 'Reviews: 1k+']}
+    badgeLink="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592"
+    badgeImage="./../images/appstore-download-badge.svg"
+  />
 </div>
 
-<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'flex-start', marginTop: '20px' }}>
-  <div style={{ marginRight: '40px' }}>
-    <h3>Android</h3>
-    <ul>
-      <li>Rating: 4.7★</li>
-      <li>Downloads: 100K+</li>
-      <li>Reviews: 829</li>
-        <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d' target="_blank" rel="noopener noreferrer">
-          <img alt='Get it on Google Play' src='./../images/googleplay-download-badge.png' style={{ width: '200px', marginTop: '10px' }}/>
+
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', marginTop: '20px' }}>
+    <div style={{ margin: '20px', padding: '20px', border: '1px solid #ccc' }}>
+        <h2 style={{ textAlign: 'center', marginBottom: '10px' }}>Android</h2>
+      <ul style={{ listStyleType: 'disc', paddingLeft: '20px' }}>
+        <li style={{ marginBottom: '5px' }}>Rating: 4.7★</li>
+        <li style={{ marginBottom: '5px' }}>Downloads: 100K+</li>
+        <li style={{ marginBottom: '5px' }}>Reviews: 829</li>
+      </ul>
+      <div style={{ textAlign: 'center', marginTop: '20px' }}>
+        <a href="https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
+          <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: 'auto' ,height: 'auto' }} />
         </a>
-    </ul>
-  </div>
-  <div>
-    <h3>iOS</h3>
-    <ul>
-      <li>Rating: 4.6★</li>
-      <li>Downloads: 80K+</li>
-      <li>Reviews: 750</li>
-        <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer">
-          <img alt='Download on the App Store' src='./../images/appstore-download-badge.svg' style={{ width: '200px', marginTop: '10px' }}/>
+      </div>
+    </div>
+    <div style={{ margin: '20px', padding: '20px', border: '1px solid #ccc' }}>
+        <h2 style={{ textAlign: 'center', marginBottom: '10px' }}>IOS</h2>
+      <ul style={{ listStyleType: 'disc', paddingLeft: '20px' }}>
+        <li style={{ marginBottom: '5px' }}>Rating: 4.4★</li>
+        <li style={{ marginBottom: '5px' }}>Downloads: 500K+</li>
+        <li style={{ marginBottom: '5px' }}>Reviews: 829</li>
+      </ul>
+      <div style={{ textAlign: 'center', marginTop: '20px' }}>
+        <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
+          <img alt='Download on the App Store' src="./../images/appstore-download-badge.svg" style={{ width: 'auto', height: 'auto' }} />
         </a>
-    </ul>
-  </div>
+      </div>
+    </div>
 </div>
+
+
 
 ### Overview
 
@@ -57,5 +78,5 @@ Working on this project really pushed me to improve my optimization strategies a
 
 ### Screenshots
 
-{/* <Image src="./../images/cover_shooter_screenshot1.png" width={512} height={512} />
-<Image src="./../images/cover_shooter_screenshot2.png" width={512} height={512} /> */}
+{/* <img src="./../images/cover_shooter_screenshot1.png" width={512} height={512} alt="Screenshot 1" />
+<img src="./../images/cover_shooter_screenshot2.png" width={512} height={512} alt="Screenshot 2" /> */}
