Save on visuals

--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -10,51 +10,36 @@ published: true
 ## Cover Shooter: Gun Shooting
 
 <div style={{ textAlign: 'center', margin: '20px 0' }}>
-  <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" width={512} height={512} />
-</div>
-<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', marginTop: '20px' }}>
-<DownloadSection
-    title="Android"
-    points={['Rating: 4.4★', 'Downloads: 300K+', 'Reviews: 3k+']}
-    badgeLink="https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d"
-    badgeImage="./../images/googleplay-download-badge.png"
-  />
-  <DownloadSection
-    title="IOS"
-    points={['Rating: 4.7★', 'Downloads: 100K+', 'Reviews: 1k+']}
-    badgeLink="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592"
-    badgeImage="./../images/appstore-download-badge.svg"
-  />
+  <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" style={{ display: 'block', margin: '0 auto' }} width={786} height={786} />
 </div>
 
-
-<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'center', marginTop: '20px' }}>
-    <div style={{ margin: '20px', padding: '20px', border: '1px solid #ccc' }}>
-        <h2 style={{ textAlign: 'center', marginBottom: '10px' }}>Android</h2>
-      <ul style={{ listStyleType: 'disc', paddingLeft: '20px' }}>
-        <li style={{ marginBottom: '5px' }}>Rating: 4.7★</li>
-        <li style={{ marginBottom: '5px' }}>Downloads: 100K+</li>
-        <li style={{ marginBottom: '5px' }}>Reviews: 829</li>
-      </ul>
-      <div style={{ textAlign: 'center', marginTop: '20px' }}>
-        <a href="https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-          <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: 'auto' ,height: 'auto' }} />
-        </a>
-      </div>
+<div style={{ display: 'flex', justifyContent: 'center', alignItems: 'flex-start', marginTop: '20px' }}>
+  <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
+    <h3 style={{ textAlign: 'left' }}>Android</h3>
+    <ul>
+      <li>Rating: 4.7★</li>
+      <li>Downloads: 100K+</li>
+      <li>Reviews: 829</li>
+    </ul>
+    <div style={{ textAlign: 'center', marginTop: '10px' }}>
+      <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
+        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px' }}/>
+      </a>
     </div>
-    <div style={{ margin: '20px', padding: '20px', border: '1px solid #ccc' }}>
-        <h2 style={{ textAlign: 'center', marginBottom: '10px' }}>IOS</h2>
-      <ul style={{ listStyleType: 'disc', paddingLeft: '20px' }}>
-        <li style={{ marginBottom: '5px' }}>Rating: 4.4★</li>
-        <li style={{ marginBottom: '5px' }}>Downloads: 500K+</li>
-        <li style={{ marginBottom: '5px' }}>Reviews: 829</li>
-      </ul>
-      <div style={{ textAlign: 'center', marginTop: '20px' }}>
-        <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-          <img alt='Download on the App Store' src="./../images/appstore-download-badge.svg" style={{ width: 'auto', height: 'auto' }} />
-        </a>
-      </div>
+  </div>
+  <div style={{ width: '250px', textAlign: 'left', minHeight: '200px' }}>
+    <h3 style={{ textAlign: 'left' }}>IOS</h3>
+    <ul>
+      <li>Rating: 4.6★</li>
+      <li>Downloads: 80K+</li>
+      <li>Reviews: 750</li>
+    </ul>
+    <div style={{ textAlign: 'center', marginTop: '10px' }}>
+      <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
+        <img alt='Download on the App Store' src="./../images/appstore-download-badge.svg" style={{ width: '205px', height: 'auto', maxHeight: '120px', marginTop: '25px' }}/>
+      </a>
     </div>
+  </div>
 </div>
 
 
