added screenshots and corrected data

--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -10,16 +10,16 @@ published: true
 ## Cover Shooter: Gun Shooting
 
 <div style={{ textAlign: 'center', margin: '20px 0' }}>
-  <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" style={{ display: 'block', margin: '0 auto' }} width={786} height={786} />
+  <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" style={{ display: 'block', margin: '0 auto' }} width={1024} height={1024} />
 </div>
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'flex-start', marginTop: '20px' }}>
   <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
     <h3 style={{ textAlign: 'left' }}>Android</h3>
     <ul>
-      <li>Rating: 4.7★</li>
-      <li>Downloads: 100K+</li>
-      <li>Reviews: 829</li>
+      <li>Rating: 4.0★</li>
+      <li>Downloads: 300K+</li>
+      <li>Reviews: 800+</li>
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
@@ -30,9 +30,9 @@ published: true
   <div style={{ width: '250px', textAlign: 'left', minHeight: '200px' }}>
     <h3 style={{ textAlign: 'left' }}>IOS</h3>
     <ul>
-      <li>Rating: 4.6★</li>
-      <li>Downloads: 80K+</li>
-      <li>Reviews: 750</li>
+      <li>Rating: 4.3★</li>
+      <li>Downloads: 100K+</li>
+      <li>Reviews: 500+</li>
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href="https://apps.apple.com/us/app/cover-shooter-free-fire-games/id1505399592" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
@@ -63,5 +63,5 @@ Working on this project really pushed me to improve my optimization strategies a
 
 ### Screenshots
 
-{/* <img src="./../images/cover_shooter_screenshot1.png" width={512} height={512} alt="Screenshot 1" />
-<img src="./../images/cover_shooter_screenshot2.png" width={512} height={512} alt="Screenshot 2" /> */}
+<img src="./../images/covershooter_screenshot1.png" width={1024} height={1024} alt="Screenshot 1" />
+<img src="./../images/covershooter_screenshot2.png" width={1024} height={1024} alt="Screenshot 2" />
