Save on components in mdx

--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -9,9 +9,13 @@ published: true
 
 ## Cover Shooter: Gun Shooting
 
-<div style={{ textAlign: 'center', margin: '20px 0' }}>
+<ImageDialog
+src="./../images/covershooter-header.png"
+/>
+
+{/* <div style={{ textAlign: 'center', margin: '20px 0' }}>
   <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" style={{ display: 'block', margin: '0 auto' }} width={1024} height={1024} />
-</div>
+</div> */}
 
 <div style={{ display: 'flex', justifyContent: 'center', alignItems: 'flex-start', marginTop: '20px' }}>
   <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
@@ -63,5 +67,15 @@ Working on this project really pushed me to improve my optimization strategies a
 
 ### Screenshots
 
-<img src="./../images/covershooter_screenshot1.png" width={1024} height={1024} alt="Screenshot 1" />
-<img src="./../images/covershooter_screenshot2.png" width={1024} height={1024} alt="Screenshot 2" />
+{/* <Protip
+title="Heads up!"
+description="This is a test for a simple component"
+/> */}
+
+<ImageDialog
+src="./../images/covershooter_screenshot1.png"
+/>
+
+<ImageDialog
+src="./../images/covershooter_screenshot2.png"
+/>
