Added lots of assets and smooth transitions,fixes deployment issues

--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -2,16 +2,16 @@
 title: "Cover Shooter"
 image: "./../images/covershooter-header.png"
 description: "An immersive shooting game with realistic graphics and intense gameplay."
-date: 2020-03-04
+date: 2023-03-04
 developer: "Rigbak"
 published: true
 ---
 
 ## Cover Shooter: Gun Shooting
 
-<ImageDialog
-src="./../images/covershooter-header.png"
-/>
+<img src="../images/covershooter_header_badge.png" alt="Game Image" className="w-full h-auto" />
+
+
 
 {/* <div style={{ textAlign: 'center', margin: '20px 0' }}>
   <img src="./../images/covershooter-header.png" alt="Cover Shooter: Gun Shooting" style={{ display: 'block', margin: '0 auto' }} width={1024} height={1024} />
@@ -21,12 +21,12 @@ src="./../images/covershooter-header.png"
   <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
     <h3 style={{ textAlign: 'left' }}>Android</h3>
     <ul>
-      <li>Rating: 4.0★</li>
+      <li>Rating: 4.1★</li>
       <li>Downloads: 300K+</li>
       <li>Reviews: 800+</li>
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
-      <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
+      <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d&hl=en&gl=US' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
         <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px' }}/>
       </a>
     </div>
@@ -46,8 +46,6 @@ src="./../images/covershooter-header.png"
   </div>
 </div>
 
-
-
 ### Overview
 
 Cover Shooter is my latest and most ambitious project. It's a third-person cover shooter for mobile that's all about smooth performance and scalability. I poured a lot into this one to make it something special.
@@ -65,17 +63,20 @@ This game was a real test of everything I'd learned. I needed it to look amazing
 
 Working on this project really pushed me to improve my optimization strategies and design methods, resulting in a polished and efficient game.
 
-### Screenshots
+### In-Game Visuals
 
-{/* <Protip
-title="Heads up!"
-description="This is a test for a simple component"
-/> */}
+<div class="mt-10">
+  <VideoLoop src="../images/covershooter_video1.mp4" className="w-full h-auto rounded-lg shadow-lg" />
+</div>
 
-<ImageDialog
-src="./../images/covershooter_screenshot1.png"
+<ZoomableImage
+src="../images/covershooter_screenshot1.png"
 />
 
-<ImageDialog
-src="./../images/covershooter_screenshot2.png"
+<ZoomableImage
+src="../images/covershooter_screenshot2.png"
+/>
+
+<ZoomableImage
+src="../images/covershooter_screenshot3.png"
 />
