video frame not round anymore

--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -66,7 +66,7 @@ Working on this project really pushed me to improve my optimization strategies a
 ### In-Game Visuals
 
 <div class="mt-10">
-  <VideoLoop src="../images/covershooter_video1.mp4" className="w-full h-auto rounded-lg shadow-lg" />
+  <VideoLoop src="../images/covershooter_video1.mp4" className="w-full h-auto rounded-none shadow-lg" />
 </div>
 
 <ZoomableImage
