--- a/content/projects/JusticeGun2.mdx
+++ b/content/projects/JusticeGun2.mdx
@@ -27,11 +27,25 @@ published: true
       </a>
     </div>
   </div>
+    <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
+    <h3 style={{ textAlign: 'left' }}>Android Demo (F2P)</h3>
+    <ul>
+      <li>Rating: 4.0★</li>
+      <li>Downloads: 850k+</li>
+      <li>Reviews: 2.8k+</li>
+    </ul>
+    <div style={{ textAlign: 'center', marginTop: '10px' }}>
+      <a style={{ display: 'inline-block', pointerEvents: 'none'}}>
+        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
+      </a>
+    <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
+    </div>
+  </div>
 </div>
 
 ### Overview
 
-Justice Gun 2 is a thrilling 3D shooter game that has garnered outstanding reviews and has sold over 50k copies. This project was a solo endeavor where I took on every aspect of development.
+Justice Gun 2 is a thrilling 3D shooter game that has garnered outstanding reviews and has sold over 50k copies. This project was a solo developer endeavor where I took on every aspect of development.
 
 ### Development Journey
 
@@ -45,7 +59,11 @@ Creating Justice Gun 2 was an intense and rewarding experience. Being the sole d
 
 ### In-Game Visuals
 
-{/* <ZoomableImage
+<div class="mt-10">
+  <VideoLoop src="../images/justicegun2_video1.mp4" className="w-full h-auto rounded-none shadow-lg" />
+</div>
+
+<ZoomableImage
   src="../images/justicegun2_screenshot1.png"
 />
 <ZoomableImage
@@ -53,7 +71,7 @@ Creating Justice Gun 2 was an intense and rewarding experience. Being the sole d
 />
 <ZoomableImage
   src="../images/justicegun2_screenshot3.png"
-/> */}
+/>
 
 ### Reflection
 
