save on title header

--- a/content/projects/JusticeGun2.mdx
+++ b/content/projects/JusticeGun2.mdx
@@ -1,7 +1,7 @@
 ---
 title: "Justice Gun 2"
 image: "./../images/justicegun2_header.png"
-description: "A thrilling 3D shooter game with outstanding reviews and over 50k downloads."
+description: "A thrilling 3D shooter game with outstanding reviews."
 date: 2022-05-15
 developer: "Rigbak"
 published: true
