more data, added more projects

--- a/content/projects/JusticeGun2.mdx
+++ b/content/projects/JusticeGun2.mdx
@@ -18,7 +18,7 @@ published: true
     <h3 style={{ textAlign: 'left' }}>Android</h3>
     <ul>
       <li>Rating: 4.5★</li>
-      <li>Downloads: 50k+</li>
+      <li>Downloads: 50k+ (Paid)</li>
       <li>Reviews: 1.9k+</li>
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
