--- a/content/projects/DirtyRevolver.mdx
+++ b/content/projects/DirtyRevolver.mdx
@@ -55,7 +55,7 @@ I made this game when i was working at DreamboxTV. Making Dirty Revolver was a u
 ### Key Techniques and Learnings
 
 - **Managing Art Team:** Majority of my experience of managing a team of artists and assets comes from this project.
-- **Comprehensive Development:** I made the skeleton and character rigging. As well as the Animation States setup in Animation Blueprints. Took on all aspects of development, including coding, optimization, testing, and deployment.
+- **Comprehensive Development:** I made the skeleton and character rigging. As well as the animation setup in Animation Blueprints. Took on all aspects of development, including coding, optimization, testing, and deployment.
 - **Dynamic Weather Conditions:** Developed a system to handle different weather conditions such as rain, snow, sunny, and stormy weather to enhance the gameplay experience. On mobile development with this low budgets, you have to recycle a lot of things without letting player notice.
 - **Optimization for Mobile:** Ensured the game performed well on a wide range of mobile devices through extensive optimization and testing.
 
@@ -77,4 +77,4 @@ I made this game when i was working at DreamboxTV. Making Dirty Revolver was a u
 
 ### Reflection
 
-Working on Dirty Revolver was a deeply rewarding experience. It pushed me to refine my skills and tackle new challenges, from creating dynamic weather systems to optimizing for performance on mobile devices. The collaboration with artists was inspiring, and seeing the positive feedback from players was incredibly gratifying. This project stands as a testament to the power of teamwork and dedication in game development.
+Working on Dirty Revolver was a deeply rewarding experience. It pushed me to refine my skills and tackle new challenges, from creating dynamic weather systems to optimizing for performance on mobile devices. The collaboration with artists was inspiring, and seeing the positive feedback from players was incredibly gratifying.
