div classes removd

--- a/content/articles/TPSTemplate.mdx
+++ b/content/articles/TPSTemplate.mdx
@@ -82,7 +82,7 @@ These can be just picked from a selection of Enum, and it will change the behavi
 
 I can't demonstrate every type of AI but, here is the Assault, which is the basic one.
 
-<div class="mt-10">
+<div>
   <VideoLoop src="../images/AI_demonstration.mp4" className="w-full h-auto rounded-none shadow-lg" />
 </div>
 
@@ -97,7 +97,7 @@ Hands are positioned by the setting of the equipped weapon to avoid duplication 
 
 ### Inventory Management
 
-<div class="mt-10">
+<div>
   <VideoLoop src="../images/tps_inventorysystem.mp4" className="w-full h-auto rounded-none shadow-lg" />
 </div>
 
