Fixed type on dirty revolver

--- a/content/projects/DirtyRevolver.mdx
+++ b/content/projects/DirtyRevolver.mdx
@@ -29,7 +29,7 @@ published: true
     </div>
   </div>
     <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
-    <h3 style={{ textAlign: 'left' }}>Android</h3>
+    <h3 style={{ textAlign: 'left' }}>IOS</h3>
     <ul>
       <li>Rating: 4.3★</li>
       <li>Downloads: 500k+</li>
