--- a/content/projects/CoverShooter.mdx
+++ b/content/projects/CoverShooter.mdx
@@ -21,8 +21,9 @@ published: true
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href='https://play.google.com/store/apps/details?id=com.rigbakgames.covershooter3d&hl=en&gl=US' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px' }}/>
+        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
       </a>
+      <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
     </div>
   </div>
   <div style={{ width: '250px', textAlign: 'left', minHeight: '200px' }}>
