--- a/content/projects/JusticeGun2.mdx
+++ b/content/projects/JusticeGun2.mdx
@@ -23,8 +23,9 @@ published: true
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href='https://play.google.com/store/apps/details?id=com.rigbak.adnam2&hl=en&gl=US' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px' }}/>
+        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
       </a>
+      <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
     </div>
   </div>
     <div style={{ width: '250px', textAlign: 'left', marginRight: '40px', minHeight: '200px' }}>
@@ -36,7 +37,7 @@ published: true
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a style={{ display: 'inline-block', pointerEvents: 'none'}}>
-        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
+        <img alt='Get it on Google Play' src="./../images/appstore-download-badge.svg" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
       </a>
     <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
     </div>
