--- a/content/projects/JusticeGun.mdx
+++ b/content/projects/JusticeGun.mdx
@@ -23,8 +23,9 @@ published: true
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href='https://play.google.com/store/apps/details?id=com.RigbakGames.AdaletNamludaAfrF&hl=en&gl=TR' target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px' }}/>
+        <img alt='Get it on Google Play' src="./../images/googleplay-download-badge.png" style={{ width: '250px', height: 'auto', maxHeight: '120px', marginTop: '10px', filter: 'grayscale(100%)' }}/>
       </a>
+      <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
     </div>
   </div>
   <div style={{ width: '250px', textAlign: 'left', minHeight: '200px' }}>
@@ -36,8 +37,9 @@ published: true
     </ul>
     <div style={{ textAlign: 'center', marginTop: '10px' }}>
       <a href="https://apps.apple.com/de/app/adalet-namluda/id1396408354" target="_blank" rel="noopener noreferrer" style={{ display: 'inline-block' }}>
-        <img alt='Download on the App Store' src="./../images/appstore-download-badge.svg" style={{ width: '205px', height: 'auto', maxHeight: '120px', marginTop: '25px' }}/>
+        <img alt='Download on the App Store' src="./../images/appstore-download-badge.svg" style={{ width: '205px', height: 'auto', maxHeight: '120px', marginTop: '25px', filter: 'grayscale(100%)' }}/>
       </a>
+      <p style={{ color: 'gray', fontSize: '12px', marginTop: '-50px' }}>Not available</p>
     </div>
   </div>
 </div>
